<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context="filip.superweather.MainActivity">

    <Button
        android:id="@+id/stockholm_button"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="getWeatherCallback"
        android:tag="@string/stockholm_id"
        android:text="@string/stockholm_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/visby_button"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="getWeatherCallback"
        android:tag="@string/visby_id"
        android:text="@string/visby_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/sigtuna_button"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="getWeatherCallback"
        android:tag="@string/sigtuna_id"
        android:text="@string/sigtuna_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>
